--- a/index.html
+++ b/index.html
@@ -18,7 +18,18 @@
         </div>
       </header>
       <main class="content">
-        <section class="lead"></section>
+        <section class="lead">
+          <h1 class="lead__title">Путешевствия по Росии</h1>
+          <p class="lead__subtitle">
+            Настоящая страна не в выпусках новостей, а здесь.
+          </p>
+
+          <div class="lead__image">
+            <div class="lead__image_map"></div>
+          </div>
+          <p class="lead__caption">Ваша полка - верхняя</p>
+        </section>
+
         <section class="intro"></section>
         <section class="photo-grid"></section>
         <section class="places"></section>
