--- a/index.html
+++ b/index.html
@@ -30,7 +30,43 @@
           <p class="lead__caption">Ваша полка - верхняя</p>
         </section>
 
-        <section class="intro"></section>
+        <section class="intro">
+          <h2 class="intro__title">Чего мы там не видели?</h2>
+          <p class="intro__text">
+            По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только
+            36% планируют провести отпуск в родной стране. Мол, чего мы тут,
+            дома, не видели? На самом деле, Россия — это целая вселенная с
+            ласковым морем юга, густыми лесами Саян и суровыми льдами плато
+            Путорана. А ещё увидеть все эти красоты можно без миллионов на
+            счету, загранпаспорта и многочасовых перелетов. Как, например, Вера
+            Башмакова — смелая молодая мама, которая взяла в охапку троих детей,
+            усадила их в свою «Ладу» и проехала 20 тысяч километров по родной
+            стране. Мы выбрали и описали некоторые интересные места, достойные
+            вашего отпуска.
+          </p>
+          <ul class="intro__list">
+            <li class="intro__list-item">
+              Часовых поясов
+              <p class="intro__list-item intro__list-item_no-bold">11</p>
+            </li>
+            <li class="intro__list-item">
+              Объектов природного наследия ЮНЕСКО
+              <p class="intro__list-item intro__list-item_no-bold">12</p>
+            </li>
+            <li class="intro__list-item">
+              Объектов культурного наследия ЮНЕСКО
+              <p class="intro__list-item intro__list-item_no-bold">16</p>
+            </li>
+            <li class="intro__list-item">
+              Природных заповедников
+              <p class="intro__list-item intro__list-item_no-bold">105</p>
+            </li>
+            <li class="intro__list-item">
+              Аэропортов
+              <p class="intro__list-item intro__list-item_no-bold">241</p>
+            </li>
+          </ul>
+        </section>
         <section class="photo-grid"></section>
         <section class="places"></section>
         <section class="cover"></section>
