add changes for photo-grid

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="pages/page.css" />
+    <link rel="stylesheet" href="pages/index.css" />
     <title>Путешевствие по Росии</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="Ana Volgina" />
   </head>
 
   <body>
-    <div class="page">
+    <div class="index">
       <header class="header">
         <div class="header__logo"></div>
         <div class="header__lang-links">
@@ -67,7 +67,60 @@
             </li>
           </ul>
         </section>
-        <section class="photo-grid"></section>
+        <section class="photo-grid">
+          <img
+            src="images/__item1.png"
+            alt="окно поезда"
+            class="photo-grid__item"
+          />
+          <img
+            src="images/__item2.png"
+            alt="горы в снегу"
+            class="photo-grid__item"
+          />
+          <img
+            src="images/__item3.png"
+            alt="волк на сене"
+            class="photo-grid__item"
+          />
+          <img
+            src="images/__item4.png"
+            alt="деревья в тумане"
+            class="photo-grid__item"
+          />
+          <img
+            src="images/__item5.png"
+            alt="колесо и лед"
+            class="photo-grid__item"
+          />
+          <img
+            src="images/__item6.png"
+            alt="горы и океан"
+            class="photo-grid__item"
+          />
+          <img src="images/__item7.png" alt="горы" class="photo-grid__item" />
+          <img
+            src="images/__item8.png"
+            alt="знак пешеходного перехода"
+            class="photo-grid__item"
+          />
+          <img
+            src="images/__item9.png"
+            alt="горы в тумане теплый тон"
+            class="photo-grid__item"
+          />
+          <img src="images/__item10.png" alt="горы" class="photo-grid__item" />
+          <img
+            src="images/__item11.png"
+            alt="обрыв к океану"
+            class="photo-grid__item"
+          />
+          <img
+            src="images/__item12.png"
+            alt="горы в сильном тумане"
+            class="photo-grid__item"
+          />
+        </section>
         <section class="places"></section>
         <section class="cover"></section>
       </main>
