--- a/index.html
+++ b/index.html
@@ -123,15 +123,8 @@
         </section>
         <section class="places">
           <div class="place">
-            <div class="place__left">
+            <div class="place__up">
               <h2 class="place__title">Куршская коса</h2>
-              <img
-                src="images/kosa.png"
-                alt="куршская коса"
-                class="place__image"
-              />
-            </div>
-            <div class="place__right">
               <div class="place__website">
                 <p class="place__website__url-heading">URL</p>
                 <a
@@ -141,33 +134,35 @@
                   >park-kosa.ru</a
                 >
               </div>
-
-              <p class="place__paragraph">
-                Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два
-                водных горизонта — спокойного Куршского залива с одной стороны и
-                подёрнутого рябью волн Балтийского моря с другой. Уникальная
-                природная зона на краю российского анклава.
-              </p>
-              <p class="place__paragraph">
-                На этом Калининградская область не заканчивается. Для
-                путешественника и исследователя там же по соседству — самая
-                западная точка России, Балтийская коса, — и немецкое наследие
-                россыпи небольших приморских городов. Атмосфера здешних мест
-                исключает суету, окуная в спокойствие природы и запах стального,
-                прохладного моря.
-              </p>
+            </div>
+            <div class="place__down">
+              <img
+                src="images/kosa.png"
+                alt="куршская коса"
+                class="place__image"
+              />
+              <div class="place__paragraph">
+                <p>
+                  Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два
+                  водных горизонта — спокойного Куршского залива с одной стороны
+                  и подёрнутого рябью волн Балтийского моря с другой. Уникальная
+                  природная зона на краю российского анклава.
+                </p>
+                <p>
+                  На этом Калининградская область не заканчивается. Для
+                  путешественника и исследователя там же по соседству — самая
+                  западная точка России, Балтийская коса, — и немецкое наследие
+                  россыпи небольших приморских городов. Атмосфера здешних мест
+                  исключает суету, окуная в спокойствие природы и запах
+                  стального, прохладного моря.
+                </p>
+              </div>
             </div>
           </div>
           <div class="place">
-            <div class="place__left">
+            <div class="place__up">
               <h2 class="place__title">Кольский</h2>
-              <img
-                src="images/kolsky.png"
-                alt="Кольский"
-                class="place__image"
-              />
-            </div>
-            <div class="place__right">
+
               <div class="place__website">
                 <p class="place__website__url-heading">URL</p>
                 <a
@@ -177,29 +172,35 @@
                   >National Geographic</a
                 >
               </div>
-
-              <p class="place__paragraph">
-                Почти весь полуостров находится за Полярным кругом. Саамская
-                тундра, от которой на юг — тайга, а на север — Ледовитый океан,
-                прикидывающийся Баренцевым морем.
-              </p>
-              <p class="place__paragraph">
-                Возможно, вы смотрели Звягинцева и даже слышали историю
-                арктического фестиваля в Териберке. Возможно, слово «Хибины» не
-                осталось под снегом школьных воспоминаний об уроках географии.
-                Возможно, вы не интересовались пронизывающей земную кору
-                сверхглубокой скважиной, а от апатитов вас давно накрывает
-                апатия. Но ваша мечта увидеть северное сияние начинает сбываться
-                с билетом в Мурманск.
-              </p>
+            </div>
+            <div class="place__down">
+              <img
+                src="images/kolsky.png"
+                alt="Кольский"
+                class="place__image"
+              />
+              <div class="place__paragraph">
+                <p>
+                  Почти весь полуостров находится за Полярным кругом. Саамская
+                  тундра, от которой на юг — тайга, а на север — Ледовитый
+                  океан, прикидывающийся Баренцевым морем.
+                </p>
+                <p>
+                  Возможно, вы смотрели Звягинцева и даже слышали историю
+                  арктического фестиваля в Териберке. Возможно, слово «Хибины»
+                  не осталось под снегом школьных воспоминаний об уроках
+                  географии. Возможно, вы не интересовались пронизывающей земную
+                  кору сверхглубокой скважиной, а от апатитов вас давно
+                  накрывает апатия. Но ваша мечта увидеть северное сияние
+                  начинает сбываться с билетом в Мурманск.
+                </p>
+              </div>
             </div>
           </div>
           <div class="place">
-            <div class="place__left">
+            <div class="place__up">
               <h2 class="place__title">Алтай</h2>
-              <img src="images/altai.png" alt="Алтай" class="place__image" />
-            </div>
-            <div class="place__right">
+
               <div class="place__website">
                 <p class="place__website__url-heading">URL</p>
                 <a
@@ -209,33 +210,31 @@
                   >Facebook</a
                 >
               </div>
-
-              <p class="place__paragraph">
-                Алтай — одно из красивейших мест в России. В первую очередь
-                из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные
-                соснами, горные реки и озёра. А если вы откроете в автомобиле
-                окна, сможете познакомиться с невидимым чудом здешних мест —
-                горным воздухом.
-              </p>
-              <p class="place__paragraph">
-                Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом.
-                Так вы увидите всё разнообразие местной флоры и фауны. По лесам
-                Алтая бродят лоси, над хребтами летают орлы, а на равнинах
-                пасутся косули. И знаменитые манулы — тоже обитатели Алтайского
-                края.
-              </p>
+            </div>
+            <div class="place__down">
+              <img src="images/altai.png" alt="Алтай" class="place__image" />
+              <div class="place__paragraph">
+                <p>
+                  Алтай — одно из красивейших мест в России. В первую очередь
+                  из-за гор: если ехать вдоль хребта, вы увидите склоны,
+                  усыпанные соснами, горные реки и озёра. А если вы откроете в
+                  автомобиле окна, сможете познакомиться с невидимым чудом
+                  здешних мест — горным воздухом.
+                </p>
+                <p>
+                  Климат на Алтае умеренный, поэтому ехать сюда лучше всего
+                  летом. Так вы увидите всё разнообразие местной флоры и фауны.
+                  По лесам Алтая бродят лоси, над хребтами летают орлы, а на
+                  равнинах пасутся косули. И знаменитые манулы — тоже обитатели
+                  Алтайского края.
+                </p>
+              </div>
             </div>
           </div>
           <div class="place">
-            <div class="place__left">
+            <div class="place__up">
               <h2 class="place__title">Зимний Байкал</h2>
-              <img
-                src="images/winter_baikal.png"
-                alt="Зимний Байкал"
-                class="place__image"
-              />
-            </div>
-            <div class="place__right">
+
               <div class="place__website">
                 <p class="place__website__url-heading">URL</p>
                 <a
@@ -245,50 +244,61 @@
                   >https://vk.com/baikalmile</a
                 >
               </div>
-
-              <p class="place__paragraph">
-                Всем известен Байкал как крупнейшее озеро в мире. Многие также
-                знают, что это самый большой источник пресной воды и одно из
-                красивейших мест в России.
-              </p>
-              <p class="place__paragraph">
-                Конечно, это всё так. Но Байкал ещё идеальное место
-                для соревнований по скийорингу. Это такой вид спорта, когда
-                лыжник привязывает себя к мотоциклу, и тандем старается развить
-                как можно бóльшую скорость на льду. В марте 2019 года на
-                фестивале «Байкальская миля» был поставлен мировой рекорд —
-                197.011 км/ч.
-              </p>
+            </div>
+            <div class="place__down">
+              <img
+                src="images/winter_baikal.png"
+                alt="Зимний Байкал"
+                class="place__image"
+              />
+              <div class="place__paragraph">
+                <p>
+                  Всем известен Байкал как крупнейшее озеро в мире. Многие также
+                  знают, что это самый большой источник пресной воды и одно из
+                  красивейших мест в России.
+                </p>
+                <p>
+                  Конечно, это всё так. Но Байкал ещё идеальное место
+                  для соревнований по скийорингу. Это такой вид спорта, когда
+                  лыжник привязывает себя к мотоциклу, и тандем старается
+                  развить как можно бóльшую скорость на льду. В марте 2019 года
+                  на фестивале «Байкальская миля» был поставлен мировой рекорд —
+                  197.011 км/ч.
+                </p>
+              </div>
             </div>
           </div>
           <div class="place">
-            <div class="place__left">
+            <div class="place__up">
               <h2 class="place__title">Карелия</h2>
-              <img
-                src="images/kaleria.png"
-                alt="Карелия"
-                class="place__image"
-              />
-            </div>
-            <div class="place__right">
+
               <div class="place__website">
                 <p class="place__website__url-heading">URL</p>
                 <a href="http://vodlozero.ru" class="place__website__link"
                   >http://vodlozero.ru/</a
                 >
               </div>
-
-              <p class="place__paragraph">
-                Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
-                сибирская лиственница не растёт западнее Водлозера. Зато здесь
-                она вымахивает на 30 метров — леса карельских национальных
-                парков из-за непроходимых болот никогда не знали топора.
-                Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к
-                живому существу, видевшему солнце раньше, чем увидал его Иван
-                Грозный. В девственном лесу на сотню километров не встретишь
-                тропы. А на редких тропинках деревья в паре метров от земли
-                помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
-              </p>
+            </div>
+            <div class="place__down">
+              <img
+                src="images/kaleria.png"
+                alt="Карелия"
+                class="place__image"
+              />
+              <div class="place__paragraph">
+                <p>
+                  Сибирь заканчивается не на Урале, а в Карелии: образующая
+                  тайгу сибирская лиственница не растёт западнее Водлозера. Зато
+                  здесь она вымахивает на 30 метров — леса карельских
+                  национальных парков из-за непроходимых болот никогда не знали
+                  топора. Некоторым соснам уже больше чем полтысячелетия.
+                  Прикоснитесь к живому существу, видевшему солнце раньше, чем
+                  увидал его Иван Грозный. В девственном лесу на сотню
+                  километров не встретишь тропы. А на редких тропинках деревья в
+                  паре метров от земли помечены медвежьими когтями. Чтобы все
+                  знали, кто тут хозяин
+                </p>
+              </div>
             </div>
           </div>
         </section>
