changes for footer

--- a/index.html
+++ b/index.html
@@ -302,9 +302,78 @@
             </div>
           </div>
         </section>
-        <section class="cover"></section>
+        <section class="cover">
+          <a
+            class="cover__link"
+            href="https://stampsy.com/na-elektrichkakh-do-baikala"
+          >
+            <div class="cover__overlay"></div>
+            <h2 class="cover__title">До Байкала «на собаках»</h2>
+            <p class="cover__subtitle">
+              По мотивам учебной темы о Транссибе и iframes — путешествие от
+              столицы до Байкала на электричках.
+            </p>
+          </a>
+        </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <nav class="footer__links">
+          <ul>
+            <li>
+              <a
+                class="footer__link"
+                href="
+              https://yandex.ru/maps"
+                >Карты
+              </a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a
+                class="footer__link"
+                href="
+              https://yandex.ru/pogoda"
+                >Погода</a
+              >
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a
+                class="footer__link"
+                href="
+              https://rasp.yandex.ru"
+              >
+                Расписание</a
+              >
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a
+                class="footer__link"
+                href="
+              https://calendar.yandex.ru"
+              >
+                Календарь
+              </a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a
+                class="footer__link"
+                href="
+              https://travel.yandex.ru"
+              >
+                Путешествия</a
+              >
+            </li>
+          </ul>
+        </nav>
+        <p class="footer__copyright">&copy; Ana Volgina, 2020</p>
+      </footer>
     </div>
   </body>
 </html>
