--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="pages/index.css" />
+    <link
+      rel="stylesheet"
+      href="Inter-3.13/Inter Hinted for Windows/Web/inter.css"
+    />
+    <link rel="stylesheet" href="Inter-3.13/Inter Web/inter.css" />
     <title>Путешевствие по Росии</title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="Ana Volgina" />
   </head>
