add named changes

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" href="pages/index.css" />
     <link
       rel="stylesheet"
-      href="Inter-3.13/Inter Hinted for Windows/Web/inter.css"
+      href="Inter-3.13/Inter_Hinted_for_Windows/Web/inter.css"
     />
-    <link rel="stylesheet" href="Inter-3.13/Inter Web/inter.css" />
+    <link rel="stylesheet" href="Inter-3.13/Inter_Web/inter.css" />
     <title>Путешевствие по Росии</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -69,7 +69,7 @@
             </li>
             <li class="intro__list-item">
               Аэропортов
-              <p xs>241</p>
+              <p>241</p>
             </li>
           </ul>
         </section>
