--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header class="header">
         <div class="header__logo"></div>
         <div class="header__lang-links">
-          <a href="#" class="header__lang-link">Ru</a>
+          <a href="#" class="header__lang-link" autofocus>Ru</a>
           <a href="#" class="header__lang-link">En</a>
         </div>
       </header>
@@ -24,9 +24,11 @@
           <p class="lead__subtitle">
             Настоящая страна не в выпусках новостей, а здесь.
           </p>
-
+          <figure>
           <img src ="images/lead_girl_foto.jpg" class="lead__image"></img>
-          <figure  class="lead__caption">Ваша полка - верхняя</figure >
+          <figcaption class="lead__caption">Ваша полка - верхняя </figcaption>
+
+          </figure >
         </section>
 
         <section class="intro">
@@ -47,23 +49,23 @@
           <ul class="intro__list">
             <li class="intro__list-item">
               Часовых поясов
-              <p>11</p>
+              <p class="intro__list-item_normal">11</p>
             </li>
             <li class="intro__list-item">
               Объектов природного наследия ЮНЕСКО
-              <p>12</p>
+              <p class="intro__list-item_normal">12</p>
             </li>
             <li class="intro__list-item">
               Объектов культурного наследия ЮНЕСКО
-              <p>16</p>
+              <p class="intro__list-item_normal">16</p>
             </li>
             <li class="intro__list-item">
               Природных заповедников
-              <p>105</p>
+              <p class="intro__list-item_normal">105</p>
             </li>
             <li class="intro__list-item">
               Аэропортов
-              <p>241</p>
+              <p class="intro__list-item_normal">241</p>
             </li>
           </ul>
         </section>
@@ -126,11 +128,11 @@
             <div class="place__up">
               <h2 class="place__title">Куршская коса</h2>
               <div class="place__website">
-                <abbr class="place__website_url-heading">URL</abbr>
+                <abbr class="place__url-heading">URL</abbr>
                 <a
                   href="
               http://park-kosa.ru"
-                  class="place__website_link"
+                  class="place__link"
                   >park-kosa.ru</a
                 >
               </div>
@@ -164,11 +166,11 @@
               <h2 class="place__title">Кольский</h2>
 
               <div class="place__website">
-                <abbr class="place__website_url-heading">URL</abbr>
+                <abbr class="place__url-heading">URL</abbr>
                 <a
                   href="
                   https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
-                  class="place__website_link"
+                  class="place__link"
                   >National Geographic</a
                 >
               </div>
@@ -202,11 +204,11 @@
               <h2 class="place__title">Алтай</h2>
 
               <div class="place__website">
-                <abbr class="place__website_url-heading">URL</abbr>
+                <abbr class="place__url-heading">URL</abbr>
                 <a
                   href="
                   https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
-                  class="place__website_link"
+                  class="place__link"
                   >Facebook</a
                 >
               </div>
@@ -236,11 +238,11 @@
               <h2 class="place__title">Зимний Байкал</h2>
 
               <div class="place__website">
-                <abbr class="place__website_url-heading">URL</abbr>
+                <abbr class="place__url-heading">URL</abbr>
                 <a
                   href="
                   https://vk.com/baikalmile"
-                  class="place__website_link"
+                  class="place__link"
                   >https://vk.com/baikalmile</a
                 >
               </div>
@@ -273,8 +275,8 @@
               <h2 class="place__title">Карелия</h2>
 
               <div class="place__website">
-                <abbr class="place__website_url-heading">URL</abbr>
-                <a href="http://vodlozero.ru" class="place__website_link"
+                <abbr class="place__url-heading">URL</abbr>
+                <a href="http://vodlozero.ru" class="place__link"
                   >http://vodlozero.ru/</a
                 >
               </div>
@@ -318,7 +320,7 @@
       </main>
       <footer class="footer">
         <nav class="footer__links">
-          <ul class="footer_links-ul">
+          <ul class="footer__list">
             <li>
               <a
                 class="footer__link"
@@ -328,7 +330,7 @@
               </a>
             </li>
           </ul>
-          <ul>
+          <ul class="footer__list" >
             <li>
               <a
                 class="footer__link"
@@ -338,7 +340,7 @@
               >
             </li>
           </ul>
-          <ul>
+          <ul class="footer__list">
             <li>
               <a
                 class="footer__link"
@@ -349,7 +351,7 @@
               >
             </li>
           </ul>
-          <ul>
+          <ul class="footer__list">
             <li>
               <a
                 class="footer__link"
@@ -360,7 +362,7 @@
               </a>
             </li>
           </ul>
-          <ul>
+          <ul class="footer__list">
             <li>
               <a
                 class="footer__link"
