--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
           <p class="lead__subtitle">
             Настоящая страна не в выпусках новостей, а здесь.
           </p>
-          <figure>
-          <img src ="images/lead_girl_foto.jpg" class="lead__image"></img>
-          <figcaption class="lead__caption">Ваша полка - верхняя </figcaption>
+         
+          <img src ="images/lead_girl_foto.jpg" class="lead__image" alt="девочка в поезде" />
+          <p class="lead__caption">Ваша полка - верхняя </p>
 
-          </figure >
+        
         </section>
 
         <section class="intro">
