--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header class="header">
         <div class="header__logo"></div>
         <div class="header__lang-links">
-          <a href="#" class="header__lang-link" autofocus>Ru</a>
+          <a href="#" class="header__lang-link header__lang-link_active" >Ru</a>
           <a href="#" class="header__lang-link">En</a>
         </div>
       </header>
