--- a/index.html
+++ b/index.html
@@ -49,23 +49,23 @@
           <ul class="intro__list">
             <li class="intro__list-item">
               Часовых поясов
-              <p class="intro__list-item_normal">11</p>
+              <p class="intro__list-item-text">11</p>
             </li>
             <li class="intro__list-item">
               Объектов природного наследия ЮНЕСКО
-              <p class="intro__list-item_normal">12</p>
+              <p class="intro__list-item-text">12</p>
             </li>
             <li class="intro__list-item">
               Объектов культурного наследия ЮНЕСКО
-              <p class="intro__list-item_normal">16</p>
+              <p class="intro__list-item-text">16</p>
             </li>
             <li class="intro__list-item">
               Природных заповедников
-              <p class="intro__list-item_normal">105</p>
+              <p class="intro__list-item-text">105</p>
             </li>
             <li class="intro__list-item">
               Аэропортов
-              <p class="intro__list-item_normal">241</p>
+              <p class="intro__list-item-text">241</p>
             </li>
           </ul>
         </section>
